--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ html {
 
 /* ===== BODY & BACKGROUND ===== */
 body {
-    background-image: url(/images/background.jpeg);
+    background-image: url(images/background.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -306,4 +306,5 @@ a {
     #initialButton {
         display: none !important;
     }
+
 }
